# frfr

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: test_benchmarks.py
rust/frfr-core/: Cargo.toml  pyproject.toml
rust/frfr-core/src/: compiled.rs  errors.rs  lib.rs
rust/frfr-core/src/types/: containers.rs  mod.rs  primitives.rs  structured.rs  unions.rs
src/frfr/: __init__.py  _core.pyi  containers.py  containers_test.py  scalars.py  scalars_test.py  structured.py  structured_test.py  types.py  utils.py  validation.py  validation_test.py  validator.py  validator_test.py
