[project]
name = "frfr"
version = "0.1.0"
description = "No-cap runtime type validation for Python. For real."
readme = "README.md"
authors = [
    { name = "Joshua Greaves", email = "joshua.greaves@gmail.com" },
    { name = "William Myers", email = "mwilliammyers@gmail.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pydantic>=2.12.5",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]
