[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "frfr-core"
version = "0.1.0"
description = "Rust core for frfr - runtime type validation"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
